fixed text and colorborder aligning home, index and show page

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -29,6 +29,7 @@ $orange: #F95738;
 .show-card-background h2 {
   color: $orange;
   margin-top: -5px;
+  letter-spacing: 3px;
 }
 
 .show-card-background img {
